--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
   },
   "dependencies": {
     "amazon-cognito-identity-js": "^2.0.3",
+    "apollo-cache-inmemory": "^1.1.12",
+    "apollo-client": "^2.2.8",
+    "apollo-link": "^1.2.2",
+    "apollo-link-context": "^1.0.8",
+    "apollo-link-http": "^1.5.4",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.1",
     "mint-ui": "^2.2.13",
     "vue": "^2.5.13",
+    "vue-apollo": "^3.0.0-beta.5",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
