--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apollo-link": "^1.2.2",
     "apollo-link-context": "^1.0.8",
     "apollo-link-http": "^1.5.4",
+    "aws-sdk": "^2.226.1",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.1",
     "mint-ui": "^2.2.13",
