--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.1",
     "mint-ui": "^2.2.13",
+    "moment": "^2.22.1",
     "vue": "^2.5.13",
     "vue-apollo": "^3.0.0-beta.5",
     "vue-router": "^3.0.1",
