--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "graphql-tag": "^2.9.1",
     "mint-ui": "^2.2.13",
     "moment": "^2.22.1",
+    "uuid-random": "^1.0.6",
     "vue": "^2.5.13",
     "vue-apollo": "^3.0.0-beta.5",
     "vue-router": "^3.0.1",
