--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,4 @@ VUE_APP_CLIENT_ID=7dtbtoflsom1nvpdp8p22ms6ht
 VUE_APP_IDENTITY_POOL=us-east-1:f1a8b994-3706-4e25-a748-c5d46b03da04
 VUE_APP_POST_IMAGE_POOL=beta-post-images
 VUE_APP_GRAPHQL_ENDPOINT=http://localhost:3000/graphql
+VUE_APP_POST_ROOT=http://beta-sublease.s3-website-us-east-1.amazonaws.com/posts
